--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="app">
+    <main>
+      <div class="main-container">
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="Ícone de voltar">
+          <span>Voltar</span>
+        </div>
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+      </div>
+    </main>
+    <aside>
+      <div class="aside-container">
+        <header>
+          <img src="assets/Frame 48095956.svg" alt="Logomarca">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+        <img src="assets/Illustration.svg" alt="Ilustração de uma aula">
+      </div>
+    </aside>
+  </div>
 </body>
 </html>
