--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 <label for="street">Rua</label>
                 <input type="text" id="street" name="street" value="Rua das Flores" disabled>
               </div>
-            
 
-            <div class="input-wrapper flex-1">
-              <label for="number">Número</label>
-              <input type="number" id="number" name="number" value="123">
+
+              <div class="input-wrapper flex-1">
+                <label for="number">Número</label>
+                <input type="number" id="number" name="number" value="123">
+              </div>
             </div>
-          </div>
             <div class="flex">
               <div class="input-wrapper flex-2">
                 <label for="city">Cidade</label>
@@ -100,6 +100,26 @@
               <div class="input-wrapper flex-1">
                 <label for="state">Estado</label>
                 <input type="text" id="state" name="state" value="SP" disabled>
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="gardian">
+            <legend>Informações do Responsável</legend>
+            <div class="input-wrapper">
+              <label for="gardian">Nome dos Responsável</label>
+              <input type="text" id="gardian" name="gardian">
+              <small>Principal responsável legal e contato de emergência</small>
+            </div>
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="tel" id="phone" name="phone" placeholder="(11) 9 8123-4567">
+            </div>
+            <div class="input-wrapper">
+              <label for="mail">E-mail</label>
+              <input type="email" id="mail" name="mail" required>
+              <div class="error">
+                <img src="/assets/icons/alert-circle.png" alt="Ícone de alerta">
+                <span>Insira um e-mail válido</span>
               </div>
             </div>
           </fieldset>
