--- a/index.html
+++ b/index.html
@@ -130,16 +130,57 @@
               <div class="radio-wrapper">
                 <div class="radio-inner">
                   <div class="radio-image"></div>
-                  <input type="radio" name="study-shift" value="morning "id="morning">
+                  <input type="radio" name="study-shift" value="morning " id="morning">
                   <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol com nuvem">
                   <label for="morning">Manhã</label>
                 </div>
 
                 <div class="radio-inner">
                   <div class="radio-image"></div>
-                  <input type="radio" name="study-shift" value="evening "id="evening">
+                  <input type="radio" name="study-shift" value="evening " id="evening">
                   <img src="assets/icons/sun-02.svg" alt="Ícone de sol">
                   <label for="evening">Tarde</label>
+                </div>
+              </div>
+            </div>
+            <div class="input-wrapper">
+              <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="football">
+                  <img src="assets/icons/football.svg" alt="ícone de bola de futebol">
+                  <label for="football">Futebol</label>
+                </div>
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="basketball">
+                  <img src="assets/icons/basketball-02.svg" alt="ícone de bola de basquete">
+                  <label for="basketball">Basquete</label>
+                </div>
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="swimming">
+                  <img src="assets/icons/swimming.svg" alt="ícone de natação">
+                  <label for="swimming">Natação</label>
+                </div>
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="yoga">
+                  <img src="assets/icons/yoga-02.svg" alt="ícone de yoga">
+                  <label for="yoga">Yoga</label>
+                </div>
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="volleyball">
+                  <img src="assets/icons/volleyball.svg" alt="ícone de bola de volei">
+                  <label for="volleyball">Vôlei</label>
+                </div>
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="boxe">
+                  <img src="assets/icons/boxing-glove-01.svg" alt="ícone de luva de boxe">
+                  <label for="boxe">Boxe</label>
                 </div>
               </div>
             </div>
