--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@
               Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. 
             </label>
           </div>
+
+          <div class="action-wrapper">
+            <button class="btn-secondary" type="button">
+              Salvar repostas
+            </button>
+              <button class="btn-primary" type="submit">
+                Fazer matrícula
+              </button>
+          </div>
         </form>
       </div>
     </main>
